--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+@layer components {
+  .heroButton {
+    @apply px-6 py-1 border-[#242424] rounded-full uppercase text-xs tracking-widest text-white transition-all
+    hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40
+  }
+
+  .contactInput {
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-2 border-[#242424]
+    text-gray-800 placeholder-gray-500 transition-all focus:border-[#F7AB0A]/40
+    focus:text-gray-600 hover:border-[#F7AB0A]/40
+  }
+
+  .date {
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-2 border-[#242424]
+    text-gray-800 placeholder-gray-500 transition-all focus:border-[#52514e]/40
+    focus:text-gray-600 hover:border-[#52514e]/40
+  }
+
+}
