--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,11 @@
 
-<div class="bg-gray-400 h-screen mt-4 flex items-center justify-center">
+<div class="bg-gray-400  mt-4 ">
   <ng-container>
-    <app-template-forms-page class="max-h-screen"></app-template-forms-page>
+    <div>
+    <app-header></app-header>
+  </div>
+  <div class="mx-auto max-w-2xl mt-3 items-center justify-center md:max-w-7xl">
+    <app-template-forms-page></app-template-forms-page>
+  </div>
   </ng-container>
 </div>
