--- a/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
+++ b/src/app/playgrounds/template-forms/template-forms-page/template-forms-page.component.html
@@ -1,4 +1,4 @@
-<div class="bg-white flex flex-col items-center justify-center max-w-4xl">
+<div class="bg-white flex flex-col items-center justify-center max-w-2xl rounded-lg md:max-w-7xl">
   <h1 class="text-3xl font-bold px-8 mt-8">Template-Driven-Forms Playground</h1>
   <form [ngFormOptions]="{ updateOn: 'blur'}" class="flex-1 max-w-2xl mx-auto bg-gray-100 p-5 rounded-md w-[500px]">
     <!-- <p>Form Model State</p>
@@ -67,6 +67,6 @@
       </div>
 
     </fieldset>
-    <button type="submit" class='bg-[#F7AB0A] py-2 px-10 rounded-md text-black font-bold text-lg mt-4'>Save</button>
+    <button type="submit" class="bg-[#F7AB0A] py-2 px-10 rounded-md text-black font-bold text-lg mt-4 mx-auto block">Save</button>
   </form>
 </div>
